New friend form now works. Show all friends as links to view individual friends

--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -3,7 +3,9 @@
 <h2>Total friends: {{model.length}}</h2>
 
 <ul>
-{{#each model as |friend|}}
-	<li>{{friend.id}} - {{friend.firstName}} {{friend.lastName}}</li>
-{{/each}}
+	{{#each model as |friend|}}
+		<li>
+			{{link-to friend.fullName 'friends.show' friend}}
+		</li>
+	{{/each}}
 </ul>
